--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "tlc-status",
   "version": "0.0.1",
   "private": true,
-  "devDependencies": {
-    "react-scripts": "1.0.14"
-  },
+
   "dependencies": {
+    "react-scripts": "1.0.14",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "whatwg-fetch": "^2.0.3"
